Substitui Arrays.asList por List.of no teste
Co-Authored-By: Evandro Pires da Silva <evandro@evandropires.com.br>